Make sure info text wraps lines nicely at smaller widths

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -223,6 +223,7 @@ html, body {
 .signin__info {
 	display: block;
 	margin-bottom: 1em;
+	padding: 0 5px;
 }
 
 .signin__link {
